add heading new game button and conditional winner

--- a/toe-app/src/app/components/board/board.component.html
+++ b/toe-app/src/app/components/board/board.component.html
@@ -1,1 +1,4 @@
-<div class="board" *ngFor=""></div>
+<h1>Current Player: {{ player }}</h1>
+<button (click)="newGame()">New Game</button>
+
+<h2 *ngIf="winner">Player {{ winner }} won the game !</h2>
