--- a/toe-app/src/app/components/square/square.component.css
+++ b/toe-app/src/app/components/square/square.component.css
@@ -1,6 +1,5 @@
 .square {
-  height: 100px;
-  width: 100px;
-  background-color: red;
-  padding: 5px;
+  height: 200px;
+  width: 200px;
+  border: 1px solid gray;
 }
