--- a/toe-app/src/app/components/board/board.component.css
+++ b/toe-app/src/app/components/board/board.component.css
@@ -1,7 +1,5 @@
 .board {
-  border: 3px solid black;
-
-  display: flex;
-  flex-wrap: wrap;
-  width: 400px;
+  display: grid;
+  grid-template-columns: 200px 200px 200px;
+  /* gap: 0px; */
 }
