--- a/toe-app/src/app/components/board/board.component.html
+++ b/toe-app/src/app/components/board/board.component.html
@@ -2,3 +2,11 @@
 <button (click)="newGame()">New Game</button>
 
 <h2 *ngIf="winner">Player {{ winner }} won the game !</h2>
+
+<main class="board">
+  <app-square
+    *ngFor="let val of squares; let i = index"
+    [value]="val"
+    (click)="makeMove(i)"
+  ></app-square>
+</main>
