--- a/toe-app/src/app/components/board/board.component.html
+++ b/toe-app/src/app/components/board/board.component.html
@@ -1,6 +1,11 @@
 <h1>Current Player: {{ player }}</h1>
 <button (click)="newGame()">New Game</button>
 
+<h3>
+  <span>X won {{ xWinsCount }} times!</span><br /><span
+    >O won {{ oWinsCount }} times!</span
+  >
+</h3>
 <h2 *ngIf="winner">Player {{ winner }} won the game !</h2>
 
 <main class="board">
